Changed 'Service' model. Updated Celery task.
Description:
- Changed 'service_up' field to 'status' ('Service' model)'.
- Updated flasgger files (change 'service_up' to 'status').
- Updated README file.
- Updated 'watchdog' service files (change 'service_up' to 'status').
- Updated Celery 'service_unknown_status_task' (change all services 'status' to 'unknown' if watchdog service is down).
